--- a/Data/ABM Main Runs/.gitattributes
+++ b/Data/ABM Main Runs/.gitattributes
@@ -7,3 +7,4 @@ output_files_AS2.zip filter=lfs diff=lfs merge=lfs -text
 output_files_AS32.zip filter=lfs diff=lfs merge=lfs -text
 output_files_AS3.zip filter=lfs diff=lfs merge=lfs -text
 output_files_AS4.zip filter=lfs diff=lfs merge=lfs -text
+concatenated[[:space:]]data.zip filter=lfs diff=lfs merge=lfs -text
